# ci_cd_trainee

./: .gitignore  converter.py  main.py  pdf_file.py  pyproject.toml  setup.cfg
.github/workflows/: github-actions.yml
