[tool.poetry]
name = "devops-trainee"
version = "0.1.0"
description = ""
authors = ["Konstantin Dombrovskiy <amplid13@mail.ru>"]
readme = "README.md"
packages = [{include = "devops_trainee"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
