[tool.poetry]
name = "devops-trainee"
version = "0.1.0"
description = ""
authors = ["Konstantin Dombrovskiy <amplid13@mail.ru>"]
readme = "README.md"
packages = [{include = "devops_trainee"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
pep8-naming = "^0.13.3"
pypdf2 = "^3.0.1"
gtts = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
